syntax = "proto3";

option go_package = "github.com/amomon/dynamic_novel_api/gen/api/proto/dynamic/v1;dynamicv1";

package api.proto.dynamic.v1;

message DynamicData {
  int32 id = 1;
  string title = 2;
  string overview = 3;
  string user_id = 4;
  bool published = 5;
}

message GetDynamicsRequest {}

message GetDynamicsResponse {
  repeated DynamicData dynamics = 1;
}

message AddDynamicRequest {
  string title = 1;
  string user_id = 2;
}

message AddDynamicResponse {
  int32 id = 1;
}

message DeleteDynamicRequest {
  int32 id = 1;
}

message DeleteDynamicResponse {}

message UpdateDynamicStatusRequest {
  int32 id = 1;
  string title = 2;
  string overview = 3;
  bool published = 4;
}

message UpdateDynamicStatusResponse {}

service DynamicService {
  rpc GetDynamics(GetDynamicsRequest) returns (GetDynamicsResponse) {}
  rpc AddDynamic(AddDynamicRequest) returns (AddDynamicResponse) {}
  rpc DeleteDynamic(DeleteDynamicRequest) returns (DeleteDynamicResponse) {}
  rpc UpdateDynamicStatus(UpdateDynamicStatusRequest) returns (UpdateDynamicStatusResponse) {}
}
